--- a/style.css
+++ b/style.css
@@ -105,6 +105,55 @@ body {
   white-space: nowrap;
 }
 
+.playground {
+  display: flex;
+  flex-direction: row;
+  gap: 135px;
+  padding-top: 233px;
+  padding-bottom: 233px;
+}
+.playground__article {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  padding-top: 49px;
+}
+.playground__heading {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.playground__text {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+}
+.playground__button {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 234.063px;
+  height: 48.603px;
+  border-radius: 30px;
+  border-style: none;
+  background: #9C0332;
+  padding: 13px 90px 13px 74px;
+  text-decoration: none;
+}
+.playground__button:hover {
+  cursor: url(img/clarity_cursor-hand-line.svg), pointer;
+  background-color: #EB443F;
+}
+
 @media screen and (max-width: 768px) {
   .center {
     padding-left: 16px;
@@ -145,5 +194,26 @@ body {
   .game__third {
     background-image: url(img/Rectangle\ 8.png);
     width: 343px;
+  }
+  .playground {
+    flex-direction: column;
+    gap: 64px;
+    padding-top: 51px;
+    padding-bottom: 85px;
+  }
+  .playground__article {
+    text-align: center;
+    padding-top: 0px;
+  }
+  .playground__heading {
+    font-size: 32px;
+  }
+  .playground__text {
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .playground__button {
+    margin-left: 54px;
+    margin-right: 54px;
   }
 }/*# sourceMappingURL=style.css.map */
