--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -106,4 +104,58 @@ body {
     margin: 236px 268px 32px 32px;
     white-space: nowrap;
 }
+
+.playground {
+    display: flex;
+    flex-direction: row;
+    gap: 135px;
+    padding-top: 233px;
+    padding-bottom: 233px;
+    &__article {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        padding-top: 49px;
+    }
+
+    &__heading {
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+
+    &__text {
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 32px;
+    }
+
+    &__button {
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        width: 234.063px;
+        height: 48.603px;
+        border-radius: 30px;
+        border-style: none;
+        background: #9C0332;
+        padding: 13px 90px 13px 74px;
+        text-decoration: none;
+        &:hover {
+            cursor: url(img/clarity_cursor-hand-line.svg), pointer;
+            background-color: #EB443F;
+        }
+    }
+
+}
+
 @import 'mobile';
