--- a/_mobile.scss
+++ b/_mobile.scss
@@ -70,4 +70,26 @@
             margin-right: 54px;
         }
     }
+    .remember-words {
+        flex-direction: column-reverse;
+        gap: 64px;
+        padding-top: 51px;
+        padding-bottom: 85px;
+
+        &__article {
+            text-align: center;
+            padding-top: 0px;
+        }
+        &__heading {
+            font-size: 32px;
+        }
+        &__text {
+            font-size: 14px;
+            line-height: 22px;
+        }
+        &__button {
+            margin-left: 54px;
+            margin-right: 54px;
+        }
+    }
 }
