--- a/style.css
+++ b/style.css
@@ -154,6 +154,55 @@ body {
   background-color: #EB443F;
 }
 
+.remember-words {
+  display: flex;
+  flex-direction: row;
+  gap: 135px;
+  padding-top: 233px;
+  padding-bottom: 233px;
+}
+.remember-words__article {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  padding-top: 49px;
+}
+.remember-words__heading {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.remember-words__text {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+}
+.remember-words__button {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 234.063px;
+  height: 48.603px;
+  border-radius: 30px;
+  border-style: none;
+  background: #9C0332;
+  padding: 13px 90px 13px 74px;
+  text-decoration: none;
+}
+.remember-words__button:hover {
+  cursor: url(img/clarity_cursor-hand-line.svg), pointer;
+  background-color: #EB443F;
+}
+
 @media screen and (max-width: 768px) {
   .center {
     padding-left: 16px;
@@ -213,6 +262,27 @@ body {
     line-height: 22px;
   }
   .playground__button {
+    margin-left: 54px;
+    margin-right: 54px;
+  }
+  .remember-words {
+    flex-direction: column-reverse;
+    gap: 64px;
+    padding-top: 51px;
+    padding-bottom: 85px;
+  }
+  .remember-words__article {
+    text-align: center;
+    padding-top: 0px;
+  }
+  .remember-words__heading {
+    font-size: 32px;
+  }
+  .remember-words__text {
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .remember-words__button {
     margin-left: 54px;
     margin-right: 54px;
   }
