--- a/style.scss
+++ b/style.scss
@@ -111,6 +111,7 @@ body {
     gap: 135px;
     padding-top: 233px;
     padding-bottom: 233px;
+
     &__article {
         display: flex;
         flex-direction: column;
@@ -150,6 +151,7 @@ body {
         background: #9C0332;
         padding: 13px 90px 13px 74px;
         text-decoration: none;
+
         &:hover {
             cursor: url(img/clarity_cursor-hand-line.svg), pointer;
             background-color: #EB443F;
@@ -157,5 +159,61 @@ body {
     }
 
 }
+
+.remember-words {
+    display: flex;
+    flex-direction: row;
+    gap: 135px;
+    padding-top: 233px;
+    padding-bottom: 233px;
+
+    &__article {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        padding-top: 49px;
+    }
+
+    &__heading {
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+
+    &__text {
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 32px;
+    }
+
+    &__button {
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        width: 234.063px;
+        height: 48.603px;
+        border-radius: 30px;
+        border-style: none;
+        background: #9C0332;
+        padding: 13px 90px 13px 74px;
+        text-decoration: none;
+
+        &:hover {
+            cursor: url(img/clarity_cursor-hand-line.svg), pointer;
+            background-color: #EB443F;
+        }
+    }
+
+}
+
 
 @import 'mobile';
